--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,5 +9,14 @@
   "browser_action": {
     "default_icon": "logo512.png",
     "default_popup": "index.html"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": [
+        "static/js/content.chunk.js",
+        "static/js/runtime-content.js"
+      ]
+    }
+  ]
 }
