--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "Strong Password Generator",
-  "version": "1.0.0",
+  "name": "snowe",
+  "version": "0.8.0",
   "manifest_version": 2,
-  "description": "Strong password generator",
+  "description": "DKSS project tool for ServiceNow",
   "icons": {
     "512": "logo512.png"
   },
@@ -10,9 +10,13 @@
     "default_icon": "logo512.png",
     "default_popup": "index.html"
   },
+  "permissions": [
+    "activeTab",
+    "storage"
+  ],
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://*.service-now.com/*"],
       "js": [
         "static/js/content.chunk.js",
         "static/js/runtime-content.js"
