--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,7 +7,7 @@
     "512": "logo512.png"
   },
   "browser_action": {
-    "default_icon": "logo512.png",
+    "default_icon": "static/icons/s.png",
     "default_popup": "index.html"
   },
   "permissions": [
