--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "snowe",
-  "version": "0.8.0",
+  "version": "1.0.1",
   "manifest_version": 2,
   "description": "DKSS project tool for ServiceNow",
   "icons": {
     "512": "logo512.png"
   },
   "browser_action": {
-    "default_icon": "static/icons/s.png",
+    "default_icon": "logo512.png",
     "default_popup": "index.html"
   },
   "permissions": [
